--- a/gb/21/2/22/n12767599.md
+++ b/gb/21/2/22/n12767599.md
@@ -1,56 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nxaewa3302/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nxaewa3302/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nxaewa3302/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nxaewa3302/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nxaewa3302/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台北市查违规广告 开罚逾6千万</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年02月22日讯】（大纪元记者赖玟茹台湾台北报导）台北市政府卫生局22日公布109年食品、药物及化妆品<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E8%BF%9D%E8%A7%84%E5%B9%BF%E5%91%8A.md#1">违规广告</a>查缉结果，共开罚806件、总裁罚6,480万5千元，累计罚锾金额前三名依序为“守喜股份有限公司”及“堤麦策略行销有限公司”分别遭裁罚176万，“晋恩股份有限公司”遭罚124万元。</p>
-<p>台北市政府卫生局统计109年<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E8%BF%9D%E8%A7%84%E5%B9%BF%E5%91%8A.md#1">违规广告</a>查缉结果，食品、药物及化妆品违规广告共开罚806件、总裁罚6,480万5千元，其中以药物77件、裁罚2,420万元（37.3%）金额最高，其次为食品类占381件，裁罚金额2,147万元（33.1%），第3名则是化妆品348件、裁罚1,913万5千元（29.6%）。</p>
-<p><ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E5%8C%97%E5%B8%82%E5%8D%AB%E7%94%9F%E5%B1%80.md#1">北市卫生局</a>统计，罚锾累计前3名的违规广告，第1名分别为“守喜股份有限公司”及“堤麦策略行销有限公司”，违规广告累计罚锾均达176万元。</p>
+<p>【大纪元2021年02月22日讯】（大纪元记者赖玟茹台湾台北报导）台北市政府卫生局22日公布109年食品、药物及化妆品<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BF%9D%E8%A7%84%E5%B9%BF%E5%91%8A.md#1">违规广告</a>查缉结果，共开罚806件、总裁罚6,480万5千元，累计罚锾金额前三名依序为“守喜股份有限公司”及“堤麦策略行销有限公司”分别遭裁罚176万，“晋恩股份有限公司”遭罚124万元。</p>
+<p>台北市政府卫生局统计109年<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BF%9D%E8%A7%84%E5%B9%BF%E5%91%8A.md#1">违规广告</a>查缉结果，食品、药物及化妆品违规广告共开罚806件、总裁罚6,480万5千元，其中以药物77件、裁罚2,420万元（37.3%）金额最高，其次为食品类占381件，裁罚金额2,147万元（33.1%），第3名则是化妆品348件、裁罚1,913万5千元（29.6%）。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8C%97%E5%B8%82%E5%8D%AB%E7%94%9F%E5%B1%80.md#1">北市卫生局</a>统计，罚锾累计前3名的违规广告，第1名分别为“守喜股份有限公司”及“堤麦策略行销有限公司”，违规广告累计罚锾均达176万元。</p>
 <p>守喜股份有限公司“台塑生医益生菌健康舒畅专案”食品广告宣称“…改善胀气，使肠道形成保护膜，抑制坏菌生长，加速排毒…改善便秘…七天打造易瘦肠…”，以及堤麦策略行销有限公司“睡美能NORAY全能呵护牛角披肩”医疗器材广告宣称“&#8230;保持维护心脏的冠状动脉的畅通，帮助脑部血液流通以增进长期记忆力，防止过多的凝血块阻塞造成心脏病及中风&#8230;”等违规词句，分别涉及夸大宣称及与核准之广告核定表内容不符。</p>
-<p>罚锾累计第3名为“晋恩股份有限公司”，违规广告罚锾累计124万元，特别是该公司之“Style以色列死海奇迹皂能量加码组”化妆品广告宣称“&#8230;国民医疗局指定皮肤门诊处方签，仅供医疗通路及门诊使用&#8230;改善换季过敏及干癣、改善痘痘&#8230;”等词句涉及夸大宣称。台<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E5%8C%97%E5%B8%82%E5%8D%AB%E7%94%9F%E5%B1%80.md#1">北市卫生局</a>针对以上违规广告已依法进行裁罚。</p>
-<p>卫生局食品药物管理科科长陈怡婷呼吁，<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E7%BD%91%E8%B7%AF%E8%B4%AD%E7%89%A9.md#1">网路购物</a>风险高，近年来Faceboook、Line及各大网路平台上常出现许多一页式网路购物广告，以低价促销并强调货到付款取信民众，但消费者于收货付款后发现商品与广告不符或品质低劣有明显瑕疵，要求退货时却遭到封锁，求助无门。</p>
-<p>台北市卫生局提醒，一页式<ahref="https://github.com/nxaewa3302/djy/blob/master/gb/tag/%E7%BD%91%E8%B7%AF%E8%B4%AD%E7%89%A9.md#1">网路购物</a>广告常有以下特征：网页上无公司名称、地址、客服电话；售价明显低于市场行情；常以限时或倒数方式吸引消费者；号称免运费、7天鉴赏期、可拆箱验货、不满意包退等；只能货到付款，或可用信用卡刷卡但刷卡页面多为虚设，将有被盗刷风险；网页常出现简体字、大陆用语等。消费者选购前应多加查证，勿轻信网页广告，慎选商誉良好的电子商务平台，并请尽量于合法商店购买产品，以保障自身消费安全及权益。◇</p>
+<p>罚锾累计第3名为“晋恩股份有限公司”，违规广告罚锾累计124万元，特别是该公司之“Style以色列死海奇迹皂能量加码组”化妆品广告宣称“&#8230;国民医疗局指定皮肤门诊处方签，仅供医疗通路及门诊使用&#8230;改善换季过敏及干癣、改善痘痘&#8230;”等词句涉及夸大宣称。台<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8C%97%E5%B8%82%E5%8D%AB%E7%94%9F%E5%B1%80.md#1">北市卫生局</a>针对以上违规广告已依法进行裁罚。</p>
+<p>卫生局食品药物管理科科长陈怡婷呼吁，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BD%91%E8%B7%AF%E8%B4%AD%E7%89%A9.md#1">网路购物</a>风险高，近年来Faceboook、Line及各大网路平台上常出现许多一页式网路购物广告，以低价促销并强调货到付款取信民众，但消费者于收货付款后发现商品与广告不符或品质低劣有明显瑕疵，要求退货时却遭到封锁，求助无门。</p>
+<p>台北市卫生局提醒，一页式<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BD%91%E8%B7%AF%E8%B4%AD%E7%89%A9.md#1">网路购物</a>广告常有以下特征：网页上无公司名称、地址、客服电话；售价明显低于市场行情；常以限时或倒数方式吸引消费者；号称免运费、7天鉴赏期、可拆箱验货、不满意包退等；只能货到付款，或可用信用卡刷卡但刷卡页面多为虚设，将有被盗刷风险；网页常出现简体字、大陆用语等。消费者选购前应多加查证，勿轻信网页广告，慎选商誉良好的电子商务平台，并请尽量于合法商店购买产品，以保障自身消费安全及权益。◇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/2/22/n12767018.md#1">台湾国安局女职员遗失机密文件 士检作出说明</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/2/21/n12765098.md#1">疑浓雾影响 西滨快云嘉段20车追撞2死8伤</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/2/18/n12760085.md#1">小年夜前缴清居检罚锾 执行官解除扣押令</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/2/18/n12760100.md#1">网售中卫特殊色口罩每片40元 涉抬价获不起诉</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/2/18/n12760124.md#1">远航欠税飞机遭法拍 以450万元卖出</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/2/16/n12755765.md#1">YouTuber网红莫彩曦 获办就业金卡</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/2/9/n12742866.md#1">水房替博弈网站洗钱32亿 高雄警逮15人</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/2/8/n12740563.md#1">台电商消费争议增4成5 虾皮逾2千件居冠</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/21/2/4/n12733086.md#1">白狼在台组红色队伍 警方逮21统促党成员</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676272.md#1">庞氏骗局上演 台央行：当心不寻常高报酬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672882.md#1">张静案爆法界论战 检吁回归法庭攻防</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672897.md#1">涉背信捞9千万 街口董座千万交保</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13670077.md#1">疫情影响 消费申诉连两年破7万件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/23/n13667545.md#1">涉偷录顾客按摩 张静遭搜索约谈</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13665136.md#1">车辆噪音罚1216件 台环署：声音照相拟扩及营建工程</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13665085.md#1">台去年11-12月统一发票千万大奖 至今仍有4张未领</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13664936.md#1">原青自愿赴乌抗俄 苏贞昌：不鼓励</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13662581.md#1">警官上铐外籍看护动私刑 刑事局移送检方侦办</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13662355.md#1">台铁工会将陈抗 吁退回公司化草案</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/1/n10353384.md#1" target="_blank">郑恩宠：中国打压 招安律师与林昭精神</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/27/n10936495.md#1" target="_blank">林辉：抗日名将殉国身后妻儿惨到乞讨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/14/n3683060.md#1" target="_blank">【石静笛】：网在收！活摘器官再成舆论焦点</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nxaewa3302/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nxaewa3302/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/22/n12767599.htm">台北市查违规广告 开罚逾6千万</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/22/n12767599.htm">台北市查违规广告 开罚逾6千万</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nxaewa3302/djy/blob/master/gb/21/2/22/n12767599.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nxaewa3302/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nxaewa3302/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nxaewa3302/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nxaewa3302/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nxaewa3302/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/2/22/n12767599.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
